--- a/_columns/Swing_Trading/zh-cn/2024-10-18.md
+++ b/_columns/Swing_Trading/zh-cn/2024-10-18.md
@@ -22,7 +22,7 @@ An Earnings Pop And Pause For SharkNinjaSharkNinja 的收益爆裂和暂停
 
 
 Strong moves are worth watching. **SharkNinja** ([SN](https://research.investors.com/quote.aspx?symbol=SN)) blasted through a flat-base buy point on a 17% gap-up on its last earnings report **(1)**. The strong move launched its [relative strength line](https://www.investors.com/how-to-invest/investors-corner/a-stock-breakout-specialty-tool-the-relative-strength-line/) to new highs along with the price. [IBD's Leaderboard](https://www.investors.com/product/leaderboard/?artProdLink=Leaderboard) had an earnings option position that put it up nicely for the day. But what if you didn't have any exposure? Rather than chase a stock on a gap-up, we often prefer to wait to see how it handles itself over the next week or so.  
-强劲的走势值得关注。**SharkNinja** （[SN）](https://research.investors.com/quote.aspx?symbol=SN) 在其上一份收益报告中跳空上涨 17% （**1），**突破了平坦的买入点。强劲的走势将其[相对强弱线](https://www.investors.com/how-to-invest/investors-corner/a-stock-breakout-specialty-tool-the-relative-strength-line/)与价格一起推向新高。[IBD 的排行榜](https://www.investors.com/product/leaderboard/?artProdLink=Leaderboard)有一个收益期权头寸，这使其在当天表现良好。但是，如果您没有任何敞口怎么办？与其在跳空上涨时追逐一只股票，我们通常更愿意等待，看看它在接下来的一周左右如何处理自己。
+强劲的走势值得关注。**SharkNinja** （[SN）](https://research.investors.com/quote.aspx?symbol=SN) 在其上一份收益报告中以 17% 的跳空突破了平坦的买入点 **（1）。**强劲的走势将其[相对强弱线](https://www.investors.com/how-to-invest/investors-corner/a-stock-breakout-specialty-tool-the-relative-strength-line/)与价格一起推向新高。[IBD 的排行榜](https://www.investors.com/product/leaderboard/?artProdLink=Leaderboard)有一个收益期权头寸，这使其在当天表现良好。但是，如果您没有任何敞口怎么办？与其在跳空上涨时追逐一只股票，我们通常更愿意等待，看看它在接下来的一周左右如何处理自己。
 
 
 SharkNinja gapped up again the next day **(2)** but then hardly gave up any ground over the next couple of weeks. After a three-day drift lower and an upside reversal, we initiated a half position on [SwingTrader](http://shop.investors.com/offer/splashresponsive.aspx?id=SwingTrader&src=A011LPH) **(3)**.  
