--- a/_columns/Swing_Trading/zh-cn/2024-11-01.md
+++ b/_columns/Swing_Trading/zh-cn/2024-11-01.md
@@ -59,17 +59,20 @@ When making sell decisions, it's wise to ditch the idea that you will sell at th
 在做出卖出决定时，明智的做法是放弃您将在顶部卖出的想法。这种情况很少见。
 
 
-For Clear Secure, we started trimming on a strong gain after the stock had run up 7% from our initial entry **(3)**. With a portion of profit locked in, you can let the stock wiggle a little more and still exit with a positive trade.  
+For Clear Secure, we started trimming on a strong gain after the stock had run up 7% from our initial entry **(3)**. With a portion of profit locked in, you can let the stock wiggle a little more and still exit with a positive trade.  
+对于 Clear Secure，在股票从最初进入 **（3）** 上涨 7% 后，我们开始削减强劲的收益。在锁定部分利润的情况下，您可以让股票多波动一点，并且仍然以积极的交易退出。
 
 
-With the benefit of hindsight, the trim doesn't look great since Clear Secure jumped again the next day **(4)**. But by making incremental decisions, the market gives you feedback. Was it a bad sell and the stock goes up more? Well, at least you still have some participation. Does it go down after you sell? Well, do more of that selling since the market gave you feedback that it was a good decision. You can also continually move your stop up so that if you do come off the top quickly, you reduce the drawdown.  
+With the benefit of hindsight, the trim doesn't look great since Clear Secure jumped again the next day **(4)**. But by making incremental decisions, the market gives you feedback. Was it a bad sell and the stock goes up more? Well, at least you still have some participation. Does it go down after you sell? Well, do more of that selling since the market gave you feedback that it was a good decision. You can also continually move your stop up so that if you do come off the top quickly, you reduce the drawdown.  
+事后看来，自从 Clear Secure 第二天再次跳跃以来，修剪看起来并不好 **（4）。**但是通过做出渐进式决策，市场会给你反馈。这是一次糟糕的卖出，股票上涨得更多吗？好吧，至少你还有一些参与。你卖后会下跌吗？好吧，多做一些销售，因为市场给你反馈说这是一个好决定。您还可以不断提高止损，这样如果您确实迅速从顶部出来，就会减少回撤。
 
 
-After showing some stalling action the next day **(5)**, we made our final exit on Clear Secure at a higher price than our initial trim **(6)**. Part of the decision came down the stock being down sharply on a day where the indexes were up and near highs.  
+After showing some stalling action the next day **(5)**, we made our final exit on Clear Secure at a higher price than our initial trim **(6)**. Part of the decision came down the stock being down sharply on a day where the indexes were up and near highs.  
+在第二天表现出一些停滞动作 **（5）** 后，我们以高于初始价格 **（6）** 的价格在 Clear Secure 上最终退出。部分决定是下跌的，股票在指数上涨并接近高点的当天大幅下跌。
 
 
-Sitting Out While A Stock Consolidates
---------------------------------------
+Sitting Out While A Stock Consolidates在股票整合时袖手旁观
+------------------------------------------------
 
 
 Pullbacks are great for entries but not as much fun to sit in. Our exit allowed us to watch Clear Secure pull back below the 10-day line without taking the hit to the portfolio **(7)**. Most likely holding it longer would have just created an exit at a worse price and a bigger drawdown. With YOU stock running into resistance at its old high **(8)**, we can watch this one from the sidelines until we see another opportunity.  
