--- a/_columns/The_Big_Picture/zh-cn/2024-10-31.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-10-31.md
@@ -10,46 +10,36 @@ author: SCOTT LEHTONEN
 
 
 
-The stock market sold off sharply Thursday as Wall Street reacted to earnings reports from tech titans **Meta Platforms** ([META](https://research.investors.com/quote.aspx?symbol=META)) and **Microsoft** ([MSFT](https://research.investors.com/quote.aspx?symbol=MSFT)) and many other companies.  
-由于华尔街对科技巨头 **Meta Platforms** （[META）](https://research.investors.com/quote.aspx?symbol=META) 和 **Microsoft** （[MSFT）](https://research.investors.com/quote.aspx?symbol=MSFT) 以及许多其他公司的财报做出反应，股市周四大幅抛售。
+The stock market sold off sharply Thursday as Wall Street reacted to earnings reports from tech titans **Meta Platforms** ([META](https://research.investors.com/quote.aspx?symbol=META)) and **Microsoft** ([MSFT](https://research.investors.com/quote.aspx?symbol=MSFT)) and many other companies.  
 
 
-Indexes fell to or below important chart levels on the eve of the October jobs report.  
-在 10 月就业报告发布前夕，指数跌至或低于重要的图表水平。
+Indexes fell to or below important chart levels on the eve of the October jobs report.  
 
 
-Late Thursday, **Amazon.com** ([AMZN](https://research.investors.com/quote.aspx?symbol=AMZN)) and **Apple** ([AAPL](https://research.investors.com/quote.aspx?symbol=AAPL)) traded mixed after both reported earnings after the close. [Amazon climbed](https://www.investors.com/news/technology/amazon-stock-q3-2024-earnings-report-amzn-aws-ai/) 4.5% in extended trading, as [Apple stock](https://www.investors.com/news/technology/apple-stock-aapl-fiscal-q4-2024-earnings/) moved down 1.3%. That provided a small boost to tech futures in overnight trading.  
-周四晚些时候，**Amazon.com** （[AMZN](https://research.investors.com/quote.aspx?symbol=AMZN)） 和**苹果** （[AAPL）](https://research.investors.com/quote.aspx?symbol=AAPL) 在收盘后均公布了收益后涨跌互现。[亚马逊在](https://www.investors.com/news/technology/amazon-stock-q3-2024-earnings-report-amzn-aws-ai/)延长交易中上涨 4.5%，苹果[股](https://www.investors.com/news/technology/apple-stock-aapl-fiscal-q4-2024-earnings/)价下跌 1.3%。这为隔夜交易中的科技期货提供了小幅提振。
+Late Thursday, **Amazon.com** ([AMZN](https://research.investors.com/quote.aspx?symbol=AMZN)) and **Apple** ([AAPL](https://research.investors.com/quote.aspx?symbol=AAPL)) traded mixed after both reported earnings after the close. [Amazon climbed](https://www.investors.com/news/technology/amazon-stock-q3-2024-earnings-report-amzn-aws-ai/) 4.5% in extended trading, as [Apple stock](https://www.investors.com/news/technology/apple-stock-aapl-fiscal-q4-2024-earnings/) moved down 1.3%. That provided a small boost to tech futures in overnight trading.  
 
 
 
 
-In the regular session, the Dow Jones Industrial Average declined 0.9% and closed below its 50-day moving average for the first time since Aug. 12.  
-在常规交易时段，道琼斯工业平均指数下跌 0.9%，自 8 月 12 日以来首次收于 50 日移动平均线下方。
+In the regular session, the Dow Jones Industrial Average declined 0.9% and closed below its 50-day moving average for the first time since Aug. 12.  
 
 
-The S&P 500 lost 1.9% and the Nasdaq composite tumbled 2.8%. For both, it was the biggest loss since Sept. 3, according to Dow Jones Market Data. And the small-cap Russell 2000 index dropped 1.6%.  
-标准普尔 500 指数下跌 1.9%，纳斯达克综合指数下跌 2.8%。根据道琼斯市场数据，这两者都是自 9 月 3 日以来的最大跌幅。小盘股罗素 2000 指数下跌 1.6%。
+The S&P 500 lost 1.9% and the Nasdaq composite tumbled 2.8%. For both, it was the biggest loss since Sept. 3, according to Dow Jones Market Data. And the small-cap Russell 2000 index dropped 1.6%.  
 
 
-Volume fell on the Nasdaq, but rose on the New York Stock Exchange from Wednesday's session. That added a [distribution day](https://www.investors.com/how-to-invest/investors-corner/stock-market-timing-the-subtle-sign-of-market-tops/) to the S&P 500, taking its count to four. Declining stocks topped advancers by about 3-1 on the Nasdaq and by 2-1 on the NYSE, according to FactSet.  
-纳斯达克的成交量下降，但纽约证券交易所的成交量从周三的交易时段开始上升。这为标准普尔 500 指数增加了一个[分发日](https://www.investors.com/how-to-invest/investors-corner/stock-market-timing-the-subtle-sign-of-market-tops/)，使其数量达到四个。根据 FactSet 的数据，下跌的股票在纳斯达克以约 3-1 的比分领先于上涨的股票，在纽约证券交易所以 2-1 的比分领先。
+Volume fell on the Nasdaq, but rose on the New York Stock Exchange from Wednesday's session. That added a [distribution day](https://www.investors.com/how-to-invest/investors-corner/stock-market-timing-the-subtle-sign-of-market-tops/) to the S&P 500, taking its count to four. Declining stocks topped advancers by about 3-1 on the Nasdaq and by 2-1 on the NYSE, according to FactSet.  
 
 
-Nine of the 11 S&P 500 sectors ended lower, with technology and consumer discretionary leading the downside. The utilities and energy sectors finished higher Thursday.  
-标准普尔 500 指数的 11 个板块中有 9 个板块收低，其中科技和非必需消费品领跌。公用事业和能源板块周四收高。
+Nine of the 11 S&P 500 sectors ended lower, with technology and consumer discretionary leading the downside. The utilities and energy sectors finished higher Thursday.  
 
 
-On the [economic front](https://www.investors.com/news/economy/pce-inflation-sept-jobless-claims-eci-federal-reserve-sp-500/), the core PCE price index ran a touch too hot in September, as the inflation gauge remained moderately above the Federal Reserve's target amid robust consumer spending. However, the Employment Cost Index, a measure of wage growth, unexpectedly slowed in Q3.  
-经济[方面](https://www.investors.com/news/economy/pce-inflation-sept-jobless-claims-eci-federal-reserve-sp-500/)，核心 PCE 价格指数在 9 月份表现得有点太火了，因为在消费者支出强劲的情况下，通胀指标仍略高于美联储的目标。然而，衡量工资增长的就业成本指数在第三季度出人意料地放缓。
+On the [economic front](https://www.investors.com/news/economy/pce-inflation-sept-jobless-claims-eci-federal-reserve-sp-500/), the core PCE price index ran a touch too hot in September, as the inflation gauge remained moderately above the Federal Reserve's target amid robust consumer spending. However, the Employment Cost Index, a measure of wage growth, unexpectedly slowed in Q3.  
 
 
-Meanwhile, the Labor Department reported that initial jobless claims unexpectedly fell in the week ended Oct. 26, reflecting a low level of layoffs.  
-与此同时，劳工部报告称，截至 10 月 26 日当周，首次申请失业救济人数意外下降，反映出裁员水平较低。
+Meanwhile, the Labor Department reported that initial jobless claims unexpectedly fell in the week ended Oct. 26, reflecting a low level of layoffs.  
 
 
-Early Friday, the Labor Department is expected to release its October jobs report. Nonfarm payrolls are expected to grow by 125,000 in October, down from September's 254,000 increase, per Econoday.  
-周五早些时候，美国劳工部预计将发布 10 月份就业报告。根据 Econoday 的数据，预计 10 月份非农就业人数将增加 125,000 人，低于 9 月份的 254,000 人。
+Early Friday, the Labor Department is expected to release its October jobs report. Nonfarm payrolls are expected to grow by 125,000 in October, down from September's 254,000 increase, per Econoday.  
 
 
 
@@ -57,8 +47,7 @@ Early Friday, the Labor Department is expected to release its October jobs repor
 ---
 
 
-[**Nvidia, Apple And Tesla Highlight How To Handle This Stock Market  
-英伟达、苹果和特斯拉重点介绍如何处理这个股票市场**](https://www.investors.com/how-to-invest/investors-corner/investing-in-stocks-stock-investing-with-three-step-routine/)
+[**Nvidia, Apple And Tesla Highlight How To Handle This Stock Market**](https://www.investors.com/how-to-invest/investors-corner/investing-in-stocks-stock-investing-with-three-step-routine/) 
 
 
 
@@ -66,8 +55,8 @@ Early Friday, the Labor Department is expected to release its October jobs repor
 ---
 
 
-Stock Market Today: Meta, Microsoft今日股市：Meta、Microsoft
-------------------------------------------------------
+Stock Market Today: Meta, Microsoft
+-----------------------------------
 
 
 [Shares of Meta Platforms](https://www.investors.com/news/technology/meta-stock-q3-2024-earnings-results-facebook-instagram/) sold off more than 4% Thursday after the company reported third quarter earnings above expectations, powered by a 19% revenue increase. But Chief Executive Mark Zuckerberg pledged to keep up the company's big spending on artificial intelligence and the metaverse.  
@@ -118,20 +107,16 @@ What To Do Now
 ![](https://www.investors.com/wp-content/uploads/2024/10/MP103124-250x300.jpg)
 
 
-Following Thursday's sharp losses, IBD reduced its recommended exposure from 80%-100% to 60%-80% to reflect the weakening action in the major stock indexes.  
-在周四大幅下跌之后，IBD 将其建议的风险敞口从 80%-100% 下调至 60%-80%，以反映主要股指的疲软行为。
+Following Thursday's sharp losses, IBD reduced its recommended exposure from 80%-100% to 60%-80% to reflect the weakening action in the major stock indexes.  
 
 
-The S&P 500 fell to its 50-day moving average and the Nasdaq is close to testing its 50-day line. Those levels will be critical junctures to watch. Further weakness below those levels would indicate the need to more aggressively cut market exposure.  
-标准普尔 500 指数跌至 50 天移动平均线，纳斯达克指数接近测试其 50 天移动平均线。这些水平将是值得关注的关键时刻。低于这些水平的进一步疲软表明需要更积极地减少市场敞口。
+The S&P 500 fell to its 50-day moving average and the Nasdaq is close to testing its 50-day line. Those levels will be critical junctures to watch. Further weakness below those levels would indicate the need to more aggressively cut market exposure.  
 
 
-The volatile stock market environment requires diligent [risk management](https://www.investors.com/how-to-invest/investors-corner/risk-management-in-the-stock-market-how-much-money-to-invest-now/), one of the [four pillars of The IBD Methodology](https://www.investors.com/how-to-invest/investors-corner/stock-market-investing-ibd-methodology/). That means incrementally adding and reducing exposure to stay in sync with the broad market. Watch for sell signals and other abrupt character changes in your holdings. For example, **SharkNinja** ([SN](https://research.investors.com/quote.aspx?symbol=SN)) [plunged nearly 17%](https://www.investors.com/news/technology/sharkninja-stock-sn-q3-2024-earnings/) to break down below the 50-day line, causing a sell signal.  
-动荡的股市环境需要勤奋的[风险管理](https://www.investors.com/how-to-invest/investors-corner/risk-management-in-the-stock-market-how-much-money-to-invest-now/)，这是 [IBD 方法论的四大支柱](https://www.investors.com/how-to-invest/investors-corner/stock-market-investing-ibd-methodology/)之一。这意味着逐步增加和减少风险敞口，以与大盘保持同步。注意您持有的资产中的卖出信号和其他突然的特征变化。例如，**SharkNinja** （[SN）](https://research.investors.com/quote.aspx?symbol=SN) [暴跌近 17%](https://www.investors.com/news/technology/sharkninja-stock-sn-q3-2024-earnings/) 跌破 50 天线，引发卖出信号。
+The volatile stock market environment requires diligent [risk management](https://www.investors.com/how-to-invest/investors-corner/risk-management-in-the-stock-market-how-much-money-to-invest-now/), one of the [four pillars of The IBD Methodology](https://www.investors.com/how-to-invest/investors-corner/stock-market-investing-ibd-methodology/). That means incrementally adding and reducing exposure to stay in sync with the broad market. Watch for sell signals and other abrupt character changes in your holdings. For example, **SharkNinja** ([SN](https://research.investors.com/quote.aspx?symbol=SN)) [plunged nearly 17%](https://www.investors.com/news/technology/sharkninja-stock-sn-q3-2024-earnings/) to break down below the 50-day line, causing a sell signal.  
 
 
-[IBD MarketSurge's](https://get.investors.com/marketsurge/?artProdLink=MarketSurge) Breaking Out Today list featured two stocks, both of which reported earnings. **GoDaddy** ([GDDY](https://research.investors.com/quote.aspx?symbol=GDDY)) crossed above a 166.17 [cup-with-handle entry](https://www.investors.com/research/ibd-stock-analysis/godaddy-gddy-nvidia-meta-microsoft/). Meanwhile, there are four ideas appearing on MarketSurge's Near Pivot list. That suggests a dwindling number of buying opportunities ready to emerge.  
-[IBD MarketSurge 的](https://get.investors.com/marketsurge/?artProdLink=MarketSurge)Breaking Out Today 名单包含两只股票，两只股票均报告了收益。**GoDaddy** （[GDDY）](https://research.investors.com/quote.aspx?symbol=GDDY) 突破 166.17 带[手柄杯的入场点](https://www.investors.com/research/ibd-stock-analysis/godaddy-gddy-nvidia-meta-microsoft/)。与此同时，MarketSurge 的 Near Pivot 列表中出现了四个想法。这表明准备出现的购买机会正在减少。
+[IBD MarketSurge's](https://get.investors.com/marketsurge/?artProdLink=MarketSurge) Breaking Out Today list featured two stocks, both of which reported earnings. **GoDaddy** ([GDDY](https://research.investors.com/quote.aspx?symbol=GDDY)) crossed above a 166.17 [cup-with-handle entry](https://www.investors.com/research/ibd-stock-analysis/godaddy-gddy-nvidia-meta-microsoft/). Meanwhile, there are four ideas appearing on MarketSurge's Near Pivot list. That suggests a dwindling number of buying opportunities ready to emerge.  
 
 
 
@@ -139,8 +124,7 @@ The volatile stock market environment requires diligent [risk management](https:
 ---
 
 
-[**Nvidia Narrowly Misses Joining This Screen Of 18 Golden Gems  
-Nvidia 差点错过加入这个包含 18 颗黄金宝石的屏幕**](https://www.investors.com/research/stock-screener-top-stocks-to-buy-watch/)
+[**Nvidia Narrowly Misses Joining This Screen Of 18 Golden Gems**](https://www.investors.com/research/stock-screener-top-stocks-to-buy-watch/)
 
 
 
@@ -148,42 +132,35 @@ Nvidia 差点错过加入这个包含 18 颗黄金宝石的屏幕**](https://www
 ---
 
 
-Stock Market Leaders To Watch: Ferrari, Intuitive, Nu值得关注的股市领导者：法拉利、Intuitive、Nu
---------------------------------------------------------------------------------
+Stock Market Leaders To Watch: Ferrari, Intuitive, Nu
+-----------------------------------------------------
 
 
-Despite Thursday's weakness, stock market leaders to watch include **Ferrari** ([RACE](https://research.investors.com/quote.aspx?symbol=RACE)), **Intuitive Surgical** ([ISRG](https://research.investors.com/quote.aspx?symbol=ISRG)) and **Nu Holdings** ([NU](https://research.investors.com/quote.aspx?symbol=NU)).  
-尽管周四表现疲软，但值得关注的股市领导者包括**法拉利** （[RACE）、](https://research.investors.com/quote.aspx?symbol=RACE)**Intuitive Surgical** （[ISRG](https://research.investors.com/quote.aspx?symbol=ISRG)） 和 **Nu Holdings** （[NU）。](https://research.investors.com/quote.aspx?symbol=NU)
+Despite Thursday's weakness, stock market leaders to watch include **Ferrari** ([RACE](https://research.investors.com/quote.aspx?symbol=RACE)), **Intuitive Surgical** ([ISRG](https://research.investors.com/quote.aspx?symbol=ISRG)) and **Nu Holdings** ([NU](https://research.investors.com/quote.aspx?symbol=NU)).  
 
 
 
-Ferrari shares are pulling back to their 50-day line, as they build a flat base with a 498.23 [buy point](https://www.investors.com/how-to-invest/investors-corner/apple-stock-set-up-proper-buy-point-before-big-rally/), according to [IBD MarketSurge](https://get.investors.com/marketsurge/?artProdLink=MarketSurge) pattern recognition.  
-根据 [IBD MarketSurge](https://get.investors.com/marketsurge/?artProdLink=MarketSurge) 模式识别，法拉利股价正在回落至 50 日线，因为它们以 498.23 [的买入点](https://www.investors.com/how-to-invest/investors-corner/apple-stock-set-up-proper-buy-point-before-big-rally/)建立了一个平坦的基础。
+Ferrari shares are pulling back to their 50-day line, as they build a flat base with a 498.23 [buy point](https://www.investors.com/how-to-invest/investors-corner/apple-stock-set-up-proper-buy-point-before-big-rally/), according to [IBD MarketSurge](https://get.investors.com/marketsurge/?artProdLink=MarketSurge) pattern recognition.  
 
 
-Robotic surgery leader Intuitive Surgical gapped up from its 50-day and 10-week lines following the company's third-quarter report on Oct. 18. Shares are pulling back just above a tight area that formed a quasi flat base. Investors can use an Oct. 25 high of 516.89 as an entry.  
-机器人手术领导者 Intuitive Surgical 在 10 月 18 日发布第三季度报告后，从其 50 天和 10 周的产品线中跳空上涨。股价正在回落至形成准平坦底部的狭窄区域上方。投资者可以使用 10 月 25 日的高点 516.89 作为入场点。
+Robotic surgery leader Intuitive Surgical gapped up from its 50-day and 10-week lines following the company's third-quarter report on Oct. 18. Shares are pulling back just above a tight area that formed a quasi flat base. Investors can use an Oct. 25 high of 516.89 as an entry.  
 
 
-And Brazilian financial leader Nu fell below a 15.16 buy point following Monday's breakout.  
-巴西金融领导者 Nu 在周一突破后跌破 15.16 买入点。
+And Brazilian financial leader Nu fell below a 15.16 buy point following Monday's breakout.  
 
 
-[View General Market Indicator charts page here.  
-在此处查看一般市场指标图表页面。](https://www.investors.com/wp-content/uploads/2024/10/DailyGMI_103124.pdf)
+[View General Market Indicator charts page here.](https://www.investors.com/wp-content/uploads/2024/10/DailyGMI_103124.pdf) 
 
 
-*Be sure to follow Scott Lehtonen on X at [@IBD\_SLehtonen](https://twitter.com/IBD_SLehtonen) for more on the Dow Jones Industrial Average and stock market news.  
-请务必关注 Scott Lehtonen 在 [X at @IBD\_SLehtonen](https://twitter.com/IBD_SLehtonen) 上了解有关道琼斯工业平均指数和股市新闻的更多信息。*
+*Be sure to follow Scott Lehtonen on X at [@IBD\_SLehtonen](https://twitter.com/IBD_SLehtonen) for more on the Dow Jones Industrial Average and stock market news.* 
 
 
 
 
-**YOU MAY ALSO LIKE: 您可能还喜欢：**
+**YOU MAY ALSO LIKE:** 
 
 
-[Check Out IBD's New Exposure Levels To Help You Stay In Step With The Market Trend  
-查看 IBD 的新风险敞口水平，以帮助您紧跟市场趋势](https://www.investors.com/how-to-invest/investors-corner/risk-management-in-the-stock-market-how-much-money-to-invest-now/)
+[Check Out IBD's New Exposure Levels To Help You Stay In Step With The Market Trend](https://www.investors.com/how-to-invest/investors-corner/risk-management-in-the-stock-market-how-much-money-to-invest-now/) 
 
 
 [Top Growth Stocks To Buy And Watch In Today's Stock Market And Dow Jones](https://www.investors.com/stock-lists/stocks-to-watch-top-rated-ipos-big-caps-and-growth-stocks/) 
