--- a/_columns/The_Big_Picture/zh-cn/2024-11-01.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-11-01.md
@@ -10,12 +10,10 @@ author: MICHAEL LARKIN
 
 
 
-The stock market ended Friday higher following a weak jobs report but booked weekly losses. Now the U.S. elections as well as the next Fed decision on interest rates loom for investors.  
-在疲软的就业报告之后，股市周五收高，但每周录得损失。现在，美国大选以及美联储的下一个利率决定对投资者来说迫在眉睫。
+The stock market ended Friday higher following a weak jobs report but booked weekly losses. Now the U.S. elections as well as the next Fed decision on interest rates loom for investors.  
 
 
-The Nasdaq composite saw early gains fade as it closed 0.8% higher. This was not enough to stop the tech-heavy index suffering a weekly decline of 1.5%, snapping a seven-week win streak in the process. It hit resistance at the [21-day exponential moving average](https://www.investors.com/how-to-invest/investors-corner/what-is-the-21-day-exponential-moving-average/) but sits 1.6% above its [50-day line.](https://www.investors.com/how-to-invest/investors-corner/50-day-moving-average-identifies-buy-sell-signals/) The index remains up 21.5% in 2024.  
-纳斯达克综合指数早盘涨幅回落，收盘上涨 0.8%。这不足以阻止以科技股为主的指数每周下跌 1.5%，在此过程中结束了连续七周的上涨。它在 [21 天指数移动平均线](https://www.investors.com/how-to-invest/investors-corner/what-is-the-21-day-exponential-moving-average/)处遇到阻力，但比 [50 天线](https://www.investors.com/how-to-invest/investors-corner/50-day-moving-average-identifies-buy-sell-signals/)高出 1.6%。该指数在 2024 年仍上涨 21.5%。
+The Nasdaq composite saw early gains fade as it closed 0.8% higher. This was not enough to stop the tech-heavy index suffering a weekly decline of 1.5%, snapping a seven-week win streak in the process. It hit resistance at the [21-day exponential moving average](https://www.investors.com/how-to-invest/investors-corner/what-is-the-21-day-exponential-moving-average/) but sits 1.6% above its [50-day line.](https://www.investors.com/how-to-invest/investors-corner/50-day-moving-average-identifies-buy-sell-signals/) The index remains up 21.5% in 2024.  
 
 
 
@@ -68,43 +66,34 @@ The [S&P 500 sectors ended Friday mixed](https://www.investors.com/category/etfs
 Investors could get a deeper insight into the action on [the stock market today](https://www.investors.com/news/stock-market-today-stock-market-news/) by examining the relative performance of Investor's Business Daily's 197 industry groups.  
 
 
-Integrated telecom services stocks, heavy construction plays, wholesale drug suppliers and replacement auto parts firms all had good days. The internet retail group also had a solid session. It was bolstered by a post-earnings jump in Amazon.com, with the stock rising 6.2% after it beat on the top and bottom lines.  
-综合电信服务股、重型建筑公司、批发药品供应商和替代汽车零部件公司都表现良好。互联网零售集团也表现稳健。它受到 Amazon.com 财报后上涨的支撑，该股在超过营收和利润后上涨 6.2%。
+Integrated telecom services stocks, heavy construction plays, wholesale drug suppliers and replacement auto parts firms all had good days. The internet retail group also had a solid session. It was bolstered by a post-earnings jump in Amazon.com, with the stock rising 6.2% after it beat on the top and bottom lines.  
 
 
-On the flip side, metal products stocks, insurance brokers, electric utility companies and mortgage plays were among the worst performers.  
-另一方面，金属制品股、保险经纪人、电力公司和抵押贷款公司是表现最差的股票之一。
+On the flip side, metal products stocks, insurance brokers, electric utility companies and mortgage plays were among the worst performers.  
 
 
-[View the General Market Indicators chart page here](https://www.investors.com/wp-content/uploads/2024/11/DailyGMI_110124.pdf).  
-[在此处查看 General Market Indicators 图表页面](https://www.investors.com/wp-content/uploads/2024/11/DailyGMI_110124.pdf)。
+[View the General Market Indicators chart page here](https://www.investors.com/wp-content/uploads/2024/11/DailyGMI_110124.pdf).  
 
 
-*Please follow Michael Larkin on X at [@IBD\_MLarkin](https://twitter.com/IBD_MLarkin) for more analysis of growth stocks.  
-请关注 Michael Larkin 在 X at [@IBD\_MLarkin](https://twitter.com/IBD_MLarkin) 上的更多分析。*
+*Please follow Michael Larkin on X at [@IBD\_MLarkin](https://twitter.com/IBD_MLarkin) for more analysis of growth stocks.* 
 
 
-**YOU MAY ALSO LIKE: 您可能还喜欢：**
+**YOU MAY ALSO LIKE:** 
 
 
-[Worried About A Trump Or Harris Election Win? How Market Could React, What To Do Now  
-担心特朗普或哈里斯赢得大选？市场如何反应，现在该怎么办](https://www.investors.com/research/donald-trump-kamala-harris-election-stock-market-reaction-sp500-nasdaq/)
+[Worried About A Trump Or Harris Election Win? How Market Could React, What To Do Now](https://www.investors.com/research/donald-trump-kamala-harris-election-stock-market-reaction-sp500-nasdaq/) 
 
 
-[This Stock Finds Gold In AI Data Center Plumbing  
-这只股票在 AI 数据中心管道中找到黄金](https://www.investors.com/news/technology/vertiv-stock-vrt-ai-data-center-infrastructure-leader/)
+[This Stock Finds Gold In AI Data Center Plumbing](https://www.investors.com/news/technology/vertiv-stock-vrt-ai-data-center-infrastructure-leader/) 
 
 
-[These Are The Five Best Stocks To Buy And Watch Now  
-这些是现在购买和观看的五只最佳股票](https://www.investors.com/research/best-stocks-to-buy-now/)
+[These Are The Five Best Stocks To Buy And Watch Now](https://www.investors.com/research/best-stocks-to-buy-now/) 
 
 
-[Join IBD Live Each Morning For Stock Tips Before The Open  
-每天早上加入 IBD Live，在开盘前获取股票提示](https://shop.investors.com/offer/splashresponsive.aspx?id=IBD-Live&intcode=invstcntnartcls%7Ccms%7Cibdlive%7C2020%7C07%7Cibdlive%7Cna%7C%7C727112&src=A00433A)
+[Join IBD Live Each Morning For Stock Tips Before The Open](https://shop.investors.com/offer/splashresponsive.aspx?id=IBD-Live&intcode=invstcntnartcls%7Ccms%7Cibdlive%7C2020%7C07%7Cibdlive%7Cna%7C%7C727112&src=A00433A) 
 
 
-[This Is The Ultimate Warren Buffett Stock, But Should You Buy It?  
-这是沃伦·巴菲特 （Warren Buffett） 的终极股票，但您应该购买它吗？](https://www.investors.com/research/berkshire-hathaway-stock-buy-now-warren-buffett-stock/)
+[This Is The Ultimate Warren Buffett Stock, But Should You Buy It?](https://www.investors.com/research/berkshire-hathaway-stock-buy-now-warren-buffett-stock/) 
 
 
 
