--- a/_columns/The_Big_Picture/zh-cn/2024-11-04.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-11-04.md
@@ -49,8 +49,7 @@ One could argue that skittishness extended into the bond markets too. Investors 
 有人可能会说，不安情绪也延伸到了债券市场。投资者大量买入长期美国国债。因此，基准 10 年期政府债券的收益率下跌 5 个基点至 4.30%。它已跌至 4.26% 的低点。
 
 
-Nonetheless, long-dated Treasuries actually show a losing year so far. The 10-year yield started in 2024 at 3.86%. On Thursday, the Federal Reserve is widely expected to conduct its second rate cut this year.  
-尽管如此，长期美国国债实际上显示出迄今为止的亏损。10 年期国债收益率从 2024 年开始为 3.86%。周四，市场普遍预计美联储将进行今年的第二次降息。
+Nonetheless, long-dated Treasuries actually show a losing year so far. The 10-year yield started in 2024 at 3.86%. On Thursday, the Federal Reserve is widely expected to conduct its second rate cut this year.  
 
 
 A Key Technical Level
@@ -99,47 +98,55 @@ Brett Friedman, a contributor at Winhall Risk Analytics and OptionMetrics, notes
 Winhall Risk Analytics 和 OptionMetrics 的撰稿人 Brett Friedman 指出，在 1996 年至 2023 年的平均选举年，标准普尔 500 指数期权的选前隐含波动率跃升了 6.8%，而非选举年则下跌了 1.8%。该研究涵盖了 11 月 5 日之前超过 10 天的交易。
 
 
-Friedman, who has built a career in financial risk management for more than three decades, has also found that since 1996, the stock market has tended to perform relatively better during non-election years from Nov. 6 through Dec. 31 than in election years. Specifically, Friedman shared this figures with IBD:  
+Friedman, who has built a career in financial risk management for more than three decades, has also found that since 1996, the stock market has tended to perform relatively better during non-election years from Nov. 6 through Dec. 31 than in election years. Specifically, Friedman shared this figures with IBD:  
+弗里德曼在金融风险管理领域建立了三十多年的职业生涯，他还发现，自 1996 年以来，股票市场在 11 月 6 日至 12 月 31 日的非选举年的表现往往比选举年要好。具体来说，弗里德曼与 IBD 分享了这些数据：
 
 
-* Post-Election Return (Nov. 6 to Dec. 31): average gain of 0.9% in election years vs. 1.8% gain in non-election years
+* Post-Election Return (Nov. 6 to Dec. 31): average gain of 0.9% in election years vs. 1.8% gain in non-election years  
+选举后回报（11 月 6 日至 12 月 31 日）：选举年的平均涨幅为 0.9%，而非选举年的平均涨幅为 1.8%
 * Post-Election Return (Nov. 6 to Dec. 31): median gain of 1.4% in election years vs. 2.6% in non-election years
 
 
-"Some skepticism is merited," Friedman commented. "The comparison between election years and non-election years, whether in relation to return or implied volatility, is inconsistent and partially skewed by the extreme results recorded in 2008. The difference between average and median results reflects this."  
-“有些怀疑是值得的，”弗里德曼评论道。“选举年和非选举年之间的比较，无论是与回报还是隐含波动率有关，都是不一致的，并且部分被 2008 年记录的极端结果所扭曲。平均结果和中位数结果之间的差异反映了这一点。
+"Some skepticism is merited," Friedman commented. "The comparison between election years and non-election years, whether in relation to return or implied volatility, is inconsistent and partially skewed by the extreme results recorded in 2008. The difference between average and median results reflects this."  
 
 
 Friedman adds research how on the stock market behaves before and after elections should be taken with a large grain of salt. Why? Consider the risks of drawing conclusions from small sample sizes. He notes that since the introduction of the Dow Jones Industrial Average in 1896, America has had 33 presidential elections while his analysis above includes just seven White House contests. "The limited number of observations makes it difficult to draw firm, statistically valid conclusions, let alone to base trading strategies on the results," Friedman said.  
 
 
-Three Sectors To Eye In The Stock Market
-----------------------------------------
+Three Sectors To Eye In The Stock Market股市值得关注的三个板块
+---------------------------------------------------
 
 
-Meanwhile, three areas of the stock market showed poor action to warrant extra caution among active stock traders.  
+Meanwhile, three areas of the stock market showed poor action to warrant extra caution among active stock traders.  
+与此同时，股市的三个领域表现不佳，值得活跃的股票交易员格外小心。
 
 
-First, recent breakouts by small-cap growth stocks have not done particularly well.  
+First, recent breakouts by small-cap growth stocks have not done particularly well.  
+首先，小盘成长股最近的突破表现并不是特别好。
 
 
-Take **TG Therapeutics** ([TGTX](https://research.investors.com/quote.aspx?symbol=TGTX)). The small-cap biotech firm, which reported a 49% plunge in third-quarter sales Monday, nose-dived 9% in heavy turnover to 24.36. TG Therapeutics also dropped more than 7%, triggering a [defensive sell rule](https://www.investors.com/how-to-invest/investors-corner/still-the-no-1-rule-for-stock-investors-always-cut-your-losses-short/), after breaking out of a narrow cup at 26.41 just one day ago.  
+Take **TG Therapeutics** ([TGTX](https://research.investors.com/quote.aspx?symbol=TGTX)). The small-cap biotech firm, which reported a 49% plunge in third-quarter sales Monday, nose-dived 9% in heavy turnover to 24.36. TG Therapeutics also dropped more than 7%, triggering a [defensive sell rule](https://www.investors.com/how-to-invest/investors-corner/still-the-no-1-rule-for-stock-investors-always-cut-your-losses-short/), after breaking out of a narrow cup at 26.41 just one day ago.  
+以 **TG Therapeutics** （[TGTX）](https://research.investors.com/quote.aspx?symbol=TGTX) 为例。这家小盘股生物技术公司周一报告称第三季度销售额暴跌 49%，大额成交量暴跌 9% 至 24.36。TG Therapeutics 也下跌超过 7%，触发防御性[卖出规则](https://www.investors.com/how-to-invest/investors-corner/still-the-no-1-rule-for-stock-investors-always-cut-your-losses-short/)，此前仅在一天前突破了 26.41 的窄杯。
 
 
-Weak Group Action
------------------
+Weak Group Action 弱组操作
+----------------------
 
 
-Second, some gold and silver miners took big hits.  
+Second, some gold and silver miners took big hits.  
+其次，一些金矿和白银矿商遭受了重大打击。
 
 
-**Idaho Strategic Resources** ([IDR](https://research.investors.com/quote.aspx?symbol=IDR)) collapsed despite a strong third-quarter report (EPS up 400%, revenue up 86%). The microcap fell more than 15% to 13.39 in more than double its usual turnover and undercut its rising 50-day line. The stock in August broke out of a [well-formed base](https://www.investors.com/how-to-invest/investors-corner/how-to-trade-growth-stocks-positive-elements-of-a-base/) with an 11.80 [buy point](https://www.investors.com/how-to-invest/investors-corner/chart-reading-basics-how-a-buy-point-marks-a-time-of-opportunity/) and climbed as much as 55%.  
+**Idaho Strategic Resources** ([IDR](https://research.investors.com/quote.aspx?symbol=IDR)) collapsed despite a strong third-quarter report (EPS up 400%, revenue up 86%). The microcap fell more than 15% to 13.39 in more than double its usual turnover and undercut its rising 50-day line. The stock in August broke out of a [well-formed base](https://www.investors.com/how-to-invest/investors-corner/how-to-trade-growth-stocks-positive-elements-of-a-base/) with an 11.80 [buy point](https://www.investors.com/how-to-invest/investors-corner/chart-reading-basics-how-a-buy-point-marks-a-time-of-opportunity/) and climbed as much as 55%.  
+尽管第三季度报告强劲（每股收益增长 400%，收入增长 86%），**但 Idaho Strategic Resources** （[IDR）](https://research.investors.com/quote.aspx?symbol=IDR) 仍股价暴跌。微型股下跌超过 15% 至 13.39，成交额是正常成交量的两倍多，并削弱了其上涨的 50 天线。该股在 8 月份突破了 11.80 [买入点](https://www.investors.com/how-to-invest/investors-corner/chart-reading-basics-how-a-buy-point-marks-a-time-of-opportunity/)的良好[基础](https://www.investors.com/how-to-invest/investors-corner/how-to-trade-growth-stocks-positive-elements-of-a-base/)，并上涨了 55%。
 
 
-Gold itself continues to move steadily higher. But in the gold and silver mining group, **Barrick Gold** ([GOLD](https://research.investors.com/quote.aspx?symbol=GOLD)) and **Newmont** ([NEM](https://research.investors.com/quote.aspx?symbol=NEM)) have also pierced their 50-day moving averages, a bearish sign in the near term.  
+Gold itself continues to move steadily higher. But in the gold and silver mining group, **Barrick Gold** ([GOLD](https://research.investors.com/quote.aspx?symbol=GOLD)) and **Newmont** ([NEM](https://research.investors.com/quote.aspx?symbol=NEM)) have also pierced their 50-day moving averages, a bearish sign in the near term.  
+黄金本身继续稳步走高。但在黄金和白银矿业集团中，**巴里克黄金** （[GOLD）](https://research.investors.com/quote.aspx?symbol=GOLD) 和**纽蒙特** （[NEM](https://research.investors.com/quote.aspx?symbol=NEM)） 也突破了 50 天移动平均线，这在短期内是一个看跌信号。
 
 
-Finally, amid news that it could get more difficult for data centers to extract power from the nation's nuclear power plants to fuel their operations, utility stocks tanked. For months, Utilities Select SPDR Sector ([XLU](https://research.investors.com/quote.aspx?symbol=XLU)) acted like a [stock market leader](https://www.investors.com/stock-lists/stocks-to-watch-top-rated-ipos-big-caps-and-growth-stocks/). But on Monday, the ETF dropped further below its [50-day moving average](https://www.investors.com/how-to-invest/investors-corner/what-is-the-50-day-moving-average-when-to-buy-or-sell-growth-stocks/) with a 1.2% slide in heavy trading.  
+Finally, amid news that it could get more difficult for data centers to extract power from the nation's nuclear power plants to fuel their operations, utility stocks tanked. For months, Utilities Select SPDR Sector ([XLU](https://research.investors.com/quote.aspx?symbol=XLU)) acted like a [stock market leader](https://www.investors.com/stock-lists/stocks-to-watch-top-rated-ipos-big-caps-and-growth-stocks/). But on Monday, the ETF dropped further below its [50-day moving average](https://www.investors.com/how-to-invest/investors-corner/what-is-the-50-day-moving-average-when-to-buy-or-sell-growth-stocks/) with a 1.2% slide in heavy trading.  
+最后，有消息称数据中心可能更难从该国的核电站中提取电力来为其运营提供燃料，公用事业股暴跌。几个月来，公用事业精选 SPDR 行业 （[XLU](https://research.investors.com/quote.aspx?symbol=XLU)） 就像[股市领导者](https://www.investors.com/stock-lists/stocks-to-watch-top-rated-ipos-big-caps-and-growth-stocks/)一样。但在周一，该 ETF 进一步跌破其 [50 天移动平均线](https://www.investors.com/how-to-invest/investors-corner/what-is-the-50-day-moving-average-when-to-buy-or-sell-growth-stocks/)，在大量交易中下跌 1.2%。
 
 
 That action triggered a [profit-taking sell rule](https://www.investors.com/how-to-invest/investors-corner/when-to-sell-stocks-big-break-below-50-day-line-can-mark-end-of-a-huge-run/). The [ETF exited Leaderboard](https://leaderboard.investors.com/#/leaders/leadersnearabuypoint) on Monday. It also fell for the eighth time in 11 sessions.  
