--- a/_columns/Swing_Trading/zh-cn/2024-10-04.md
+++ b/_columns/Swing_Trading/zh-cn/2024-10-04.md
@@ -21,20 +21,17 @@ If a friend treated you poorly enough times, you might feel like ending the rela
 
 
 
-Summer Shakeouts For Spotify StockSpotify 股票的夏季淘汰赛
---------------------------------------------------
+Summer Shakeouts For Spotify Stock
+----------------------------------
 
 
-After a strong gap-up on its latest earnings report, Spotify gained our interest again. It pulled back slightly, losing little of its gains and then quickly rebounded **(1)**. The relative strength line hitting a new high added conviction. Plus the S&P 500 had a [follow-through](https://www.investors.com/how-to-invest/investors-corner/stock-market-bottoms-how-to-invest-using-follow-through-days/) that day. It was enough for us to start a full position in Spotify on [SwingTrader](https://swingtrader.investors.com/#/).  
-在最新收益报告大幅跳空上涨后，Spotify 再次引起了我们的兴趣。它略微回落，损失了很少的收益，然后迅速反弹 **（1）。**相对强弱线创下新高，增加了信念。此外，标准普尔 500 指数当天有[后续](https://www.investors.com/how-to-invest/investors-corner/stock-market-bottoms-how-to-invest-using-follow-through-days/)行动。对我们来说，在 [SwingTrader](https://swingtrader.investors.com/#/) 上开始 Spotify 的完整头寸就足够了。
+After a strong gap-up on its latest earnings report, Spotify gained our interest again. It pulled back slightly, losing little of its gains and then quickly rebounded **(1)**. The relative strength line hitting a new high added conviction. Plus the S&P 500 had a [follow-through](https://www.investors.com/how-to-invest/investors-corner/stock-market-bottoms-how-to-invest-using-follow-through-days/) that day. It was enough for us to start a full position in Spotify on [SwingTrader](https://swingtrader.investors.com/#/).  
 
 
-The 5% jump at the highs the next day looked like we made a good decision, but then it quickly reversed and we exited later the same day with a loss **(2)**. Downside reversals of that magnitude are a big warning sign and exiting prevented us from taking an even larger loss if we had held.  
-第二天高点上涨 5% 看起来我们做出了一个正确的决定，但随后它很快逆转，我们在同一天晚些时候以亏损退出 **（2）。**如此幅度的下行反转是一个很大的警告信号，如果我们持有，退出可以防止我们遭受更大的损失。
+The 5% jump at the highs the next day looked like we made a good decision, but then it quickly reversed and we exited later the same day with a loss **(2)**. Downside reversals of that magnitude are a big warning sign and exiting prevented us from taking an even larger loss if we had held.  
 
 
-A dramatic upside reversal on Aug. 5 breached the 50-day line. When we saw a follow-up to the reversal, we tried Spotify again **(3)**. A similar downside reversal happened the next day **(4)**. This time we exited a little quicker in order to keep the trade positive. Instead of falling further, the stock recovered and kept going without us.  
-8 月 5 日的戏剧性上行逆转突破了 50 天线。当我们看到逆转的后续行动时，我们再次尝试了 Spotify **（3）。**第二天也发生了类似的下行逆转 **（4）。**这一次，我们退出得更快一些，以保持交易积极。股票没有进一步下跌，而是在没有我们的情况下恢复并继续上涨。
+A dramatic upside reversal on Aug. 5 breached the 50-day line. When we saw a follow-up to the reversal, we tried Spotify again **(3)**. A similar downside reversal happened the next day **(4)**. This time we exited a little quicker in order to keep the trade positive. Instead of falling further, the stock recovered and kept going without us.  
 
 
 
@@ -42,8 +39,7 @@ A dramatic upside reversal on Aug. 5 breached the 50-day line. When we saw a fol
 ---
 
 
-[**Jon Najarian sees more treats to this market despite the mounting reasons for worry  
-乔恩·纳贾里安 （Jon Najarian） 认为这个市场有更多优惠，尽管担忧的理由越来越多**](https://www.investors.com/ibd-videos/videos/najarian-how-to-avoid-getting-scared-out-of-market-filled-with-tricks-treats)
+[**Jon Najarian sees more treats to this market despite the mounting reasons for worry**](https://www.investors.com/ibd-videos/videos/najarian-how-to-avoid-getting-scared-out-of-market-filled-with-tricks-treats) 
 
 
 
@@ -51,47 +47,38 @@ A dramatic upside reversal on Aug. 5 breached the 50-day line. When we saw a fol
 ---
 
 
-We attempted to get back in a couple weeks later **(5)** but the stock never launched. After more than a week without progress we exited Spotify again before the trade went negative **(6)**.  
-我们试图在几周后恢复 **（5），**但该股从未推出。在一个多星期没有进展后，我们在交易变为负值之前再次退出了 Spotify **（6）。**
+We attempted to get back in a couple weeks later **(5)** but the stock never launched. After more than a week without progress we exited Spotify again before the trade went negative **(6)**.  
 
 
-Fourth Time's A Charm 第四次的魅力
-----------------------------
+Fourth Time's A Charm
+---------------------
 
 
-Hadn't we had enough? Three weeks later, we tried Spotify again **(7)**. A strong gap up and a relative strength line at new highs enticed us to start a half position that we brought to a full position in short order. Recognizing increased volatility, we started locking in profits quickly **(8)** and exited completely just over a week from our entry **(9)**. The trade was good for a quick 3.8% and gave us another win under our belt.  
-我们还没有吃够吗？三周后，我们再次尝试了 Spotify **（7）。**强劲的向上跳空和新高的相对强弱线吸引我们开始半仓，我们在短时间内将其变为满仓。认识到波动性增加，我们开始迅速锁定利润 **（8），**并在入场一周多后完全退出 **（9）。**这笔交易很快就达到了 3.8%，让我们再次获胜。
+Hadn't we had enough? Three weeks later, we tried Spotify again **(7)**. A strong gap up and a relative strength line at new highs enticed us to start a half position that we brought to a full position in short order. Recognizing increased volatility, we started locking in profits quickly **(8)** and exited completely just over a week from our entry **(9)**. The trade was good for a quick 3.8% and gave us another win under our belt.  
 
 
-This was actually the 11th trade in Spotify since 2020 for a collective gain of over 40%. Three of the trades were losses. Four produced gains of less than 1%.  
-这实际上是自 2020 年以来 Spotify 的第 11 笔交易，集体收益超过 40%。其中 3 笔交易亏损。4 笔的收益不到 1%。
+This was actually the 11th trade in Spotify since 2020 for a collective gain of over 40%. Three of the trades were losses. Four produced gains of less than 1%.  
 
 
-Of the four that worked, they more than made up for the ones that didn't. By keeping losses small, you give yourself the luxury of multiple attempts. Just one of those that turn into a big hit can make solid portfolio progress.  
-在四个有效的项目中，它们弥补了那些无效的。通过保持较小的损失，您可以给自己多次尝试的奢侈。只要其中一次变成大热门，就可以使投资组合取得坚实的进展。
+Of the four that worked, they more than made up for the ones that didn't. By keeping losses small, you give yourself the luxury of multiple attempts. Just one of those that turn into a big hit can make solid portfolio progress.  
 
 
-*More details on past trades are accessible to subscribers and trialists to SwingTrader. [Free trials](http://shop.investors.com/offer/splashresponsive.aspx?id=SwingTrader&src=A011LPH) are available. Follow Nielsen on X, formerly known as Twitter, at [@IBD\_JNielsen](https://twitter.com/IBD_JNielsen).  
-SwingTrader 的订阅者和试用者可以访问有关过去交易的更多详细信息。提供[免费试用](http://shop.investors.com/offer/splashresponsive.aspx?id=SwingTrader&src=A011LPH)。在 X 上关注尼尔森，前身为 Twitter，网址为 [@IBD\_JNielsen](https://twitter.com/IBD_JNielsen)。*
+*More details on past trades are accessible to subscribers and trialists to SwingTrader. [Free trials](http://shop.investors.com/offer/splashresponsive.aspx?id=SwingTrader&src=A011LPH) are available. Follow Nielsen on X, formerly known as Twitter, at [@IBD\_JNielsen](https://twitter.com/IBD_JNielsen).* 
 
 
-**YOU MAY ALSO LIKE: 您可能还喜欢：**
+**YOU MAY ALSO LIKE:** 
 
 
-[Want To Know Our Swing Trading Strategies? Watch This Weekly Update.  
-想知道我们的波段交易策略吗？观看此每周更新。](https://www.investors.com/ibd-videos/category/swing-trader-status-update?archive=1)
+[Want To Know Our Swing Trading Strategies? Watch This Weekly Update.](https://www.investors.com/ibd-videos/category/swing-trader-status-update?archive=1) 
 
 
-[The Rate Cuts Have Begun! David Saito-Chung Explains What To Expect.  
-降息已经开始！David Saito-Chung 解释了会发生什么。](https://www.investors.com/ibd-videos/videos/this-is-whats-next-for-the-market-according-to-fed-rate-cut-history)
+[The Rate Cuts Have Begun! David Saito-Chung Explains What To Expect.](https://www.investors.com/ibd-videos/videos/this-is-whats-next-for-the-market-according-to-fed-rate-cut-history) 
 
 
-[Eric Krull Shares How This Market Rally Stacks Up To History  
-Eric Krull 分享了这场市场反弹如何成为历史](https://www.investors.com/ibd-videos/videos/how-to-cope-with-wild-market-swings-as-fed-cuts-rates)
+[Eric Krull Shares How This Market Rally Stacks Up To History](https://www.investors.com/ibd-videos/videos/how-to-cope-with-wild-market-swings-as-fed-cuts-rates) 
 
 
-[Follow Premarket And After-The-Open Action With IBD Experts  
-跟随 IBD 专家的盘前和开盘后行动](https://get.investors.com/ibd-live/)
+[Follow Premarket And After-The-Open Action With IBD Experts](https://get.investors.com/ibd-live/) 
 
 
 
