--- a/_columns/Swing_Trading/zh-cn/2024-10-11.md
+++ b/_columns/Swing_Trading/zh-cn/2024-10-11.md
@@ -17,24 +17,20 @@ Buy low and sell high is often the simple instruction given for stock market suc
 
 
 
-A Strong Catalyst For Constellation星座的强大催化剂
--------------------------------------------
+A Strong Catalyst For Constellation
+-----------------------------------
 
 
-There has been plenty of excitement about artificial intelligence, cryptocurrency and electric vehicles in recent years. Less talked about, but getting more apparent, is the tremendous energy these technologies will require.  
-近年来，人工智能、加密货币和电动汽车引起了人们的广泛关注。人们很少被谈论，但越来越明显的是，这些技术将需要巨大的能源。
+There has been plenty of excitement about artificial intelligence, cryptocurrency and electric vehicles in recent years. Less talked about, but getting more apparent, is the tremendous energy these technologies will require.  
 
 
-That's where **Constellation Energy** ([CEG](https://research.investors.com/quote.aspx?symbol=CEG)) comes in. Its 125% gain for the year puts it right up there with AI giant **Nvidia** ([NVDA](https://research.investors.com/quote.aspx?symbol=NVDA)). After trading below its 50-day line during its summer vacation, CEG stock popped back above the line in mid-September **(1)**.  
-这就是 **Constellation Energy** （[CEG](https://research.investors.com/quote.aspx?symbol=CEG)） 的用武之地。其今年 125% 的涨幅使其与人工智能巨头**英伟达** （[NVDA）](https://research.investors.com/quote.aspx?symbol=NVDA) 并驾齐驱。在暑假期间交易低于 50 天线后，CEG 股价在 9 月中旬重新升至线上方 **（1）。**
+That's where **Constellation Energy** ([CEG](https://research.investors.com/quote.aspx?symbol=CEG)) comes in. Its 125% gain for the year puts it right up there with AI giant **Nvidia** ([NVDA](https://research.investors.com/quote.aspx?symbol=NVDA)). After trading below its 50-day line during its summer vacation, CEG stock popped back above the line in mid-September **(1)**.  
 
 
-To put an exclamation point on the importance of power, CEG announced a [20-year contract](https://www.investors.com/news/sp-500-nuclear-inks-microsoft-deal-three-mile-island-restart/) with **Microsoft** ([MSFT](https://research.investors.com/quote.aspx?symbol=MSFT)) to power its data centers **(2)**. Notably, the [relative strength line](https://www.investors.com/how-to-invest/investors-corner/relative-strength-line-gives-crucial-clues-about-stocks-ready-to-make-big-gains/) flew to new highs along with the price.  
-为了强调电力的重要性，CEG 宣布与 **Microsoft** （[MSFT）](https://research.investors.com/quote.aspx?symbol=MSFT) 签订[为期 20 年的合同](https://www.investors.com/news/sp-500-nuclear-inks-microsoft-deal-three-mile-island-restart/)，为其数据中心供电 **（2）。**值得注意的是，[相对强弱线](https://www.investors.com/how-to-invest/investors-corner/relative-strength-line-gives-crucial-clues-about-stocks-ready-to-make-big-gains/)随着价格飙升至新高。
+To put an exclamation point on the importance of power, CEG announced a [20-year contract](https://www.investors.com/news/sp-500-nuclear-inks-microsoft-deal-three-mile-island-restart/) with **Microsoft** ([MSFT](https://research.investors.com/quote.aspx?symbol=MSFT)) to power its data centers **(2)**. Notably, the [relative strength line](https://www.investors.com/how-to-invest/investors-corner/relative-strength-line-gives-crucial-clues-about-stocks-ready-to-make-big-gains/) flew to new highs along with the price.  
 
 
-Still, the gap-up over 20% held a lot of risk as a buy point. However, as CEG stock held the gains, it became more interesting. Especially after testing the 250 level and finding support **(3)**.  
-尽管如此，超过 20% 的跳空作为买入点存在很大风险。然而，随着 CEG 股票保持涨幅，它变得更加有趣。尤其是在测试 250 水平并找到支撑 **（3）** 之后。
+Still, the gap-up over 20% held a lot of risk as a buy point. However, as CEG stock held the gains, it became more interesting. Especially after testing the 250 level and finding support **(3)**.  
 
 
 
@@ -42,8 +38,7 @@ Still, the gap-up over 20% held a lot of risk as a buy point. However, as CEG st
 ---
 
 
-[**This technician shares how breadth can be an early warning signal for market tops  
-该技术人员分享了广度如何成为市场顶部的早期预警信号**](https://www.investors.com/ibd-videos/videos/whats-next-for-supercharged-markets-and-how-to-adjust-your-allocations)
+[**This technician shares how breadth can be an early warning signal for market tops**](https://www.investors.com/ibd-videos/videos/whats-next-for-supercharged-markets-and-how-to-adjust-your-allocations) 
 
 
 
@@ -51,59 +46,48 @@ Still, the gap-up over 20% held a lot of risk as a buy point. However, as CEG st
 ---
 
 
-The next day it cleared the highs of the prior two days and it joined [SwingTrader](http://shop.investors.com/offer/splashresponsive.aspx?id=SwingTrader&src=A011LPH) as a half position initially **(4)**. Again, the relative strength line confirmed the strength as it reached new highs with the price.  
-第二天，它清除了前两天的高点，最初以半个位置加入 **SwingTrader （4）。**再次，相对强弱线证实了强度，因为它随价格创下新高。
+The next day it cleared the highs of the prior two days and it joined [SwingTrader](http://shop.investors.com/offer/splashresponsive.aspx?id=SwingTrader&src=A011LPH) as a half position initially **(4)**. Again, the relative strength line confirmed the strength as it reached new highs with the price.  
 
 
-As we immediately got traction on the new buy, we added an additional quarter position later the same day.  
-由于我们立即获得了新买家的吸引力，因此我们在当天晚些时候又增加了一个季度位置。
+As we immediately got traction on the new buy, we added an additional quarter position later the same day.  
 
 
-Locking In Gains While You Have Them在拥有收益时锁定收益
-----------------------------------------------
+Locking In Gains While You Have Them
+------------------------------------
 
 
-Constellation quickly founds its way to a 20% profit zone from its traditional entry and immediately showed a downside reversal **(5)**. We took the opportunity to lock in the gains on our quarter position add just in case weakness followed.  
-Constellation 很快从其传统入场点找到了通往 20% 利润区的道路，并立即显示出下行反转 **（5）。**我们借此机会锁定了季度头寸的收益，以防万一出现疲软。
+Constellation quickly founds its way to a 20% profit zone from its traditional entry and immediately showed a downside reversal **(5)**. We took the opportunity to lock in the gains on our quarter position add just in case weakness followed.  
 
 
-Initially CEG held **(6)**. But it plunged below its 10-day moving average line the next day and undercut the lows of the last few days **(7)**. It was reason enough to take the profits while we had them with an exit at 266.48.  
-最初 CEG 持有 **（6）。**但第二天它跌破了 10 天移动平均线，并跌破了过去几天的低点 **（7）。**这有足够的理由获利了结，而我们在 266.48 处退出。
+Initially CEG held **(6)**. But it plunged below its 10-day moving average line the next day and undercut the lows of the last few days **(7)**. It was reason enough to take the profits while we had them with an exit at 266.48.  
 
 
-Gone But Not Forgotten 逝去但未被遗忘
-------------------------------
+Gone But Not Forgotten
+----------------------
 
 
-Our exit looked good, especially as Constellation fell another 6.5% over the next couple of days **(8)**. But leading stocks should remain on your radar. At its lows on Friday, CEG stock found support at its 21-day moving average line and quickly reversed.  
-我们的退出看起来不错，尤其是 Constellation 在接下来的几天里又下跌了 6.5% **（8）。**但领先股票应该继续受到您的关注。在周五的低点，CEG 股票在其 21 天移动平均线找到支撑并迅速反转。
+Our exit looked good, especially as Constellation fell another 6.5% over the next couple of days **(8)**. But leading stocks should remain on your radar. At its lows on Friday, CEG stock found support at its 21-day moving average line and quickly reversed.  
 
 
-Upside reversals are one of our favorite setups for swing trading. The low offers an easy place to know when you are wrong and the entry is often early enough to get you a cushion before it hits a traditional buy point. In this case, our reentry into CEG stock was over 3% below our exit price. While it's nice to get back into a stock at a lower price, it was the setup itself that was the decision maker. Buying right is more important than buying low.  
-上行反转是我们最喜欢的波段交易设置之一。低点提供了一个很容易知道您何时出错的地方，并且入场通常足够早，可以在它触及传统买入点之前为您提供缓冲。在这种情况下，我们重新进入 CEG 股票的价格比我们的退出价格低 3% 以上。虽然以较低的价格重新进入股票是件好事，但决策者是设置本身。正确购买比低买更重要。
+Upside reversals are one of our favorite setups for swing trading. The low offers an easy place to know when you are wrong and the entry is often early enough to get you a cushion before it hits a traditional buy point. In this case, our reentry into CEG stock was over 3% below our exit price. While it's nice to get back into a stock at a lower price, it was the setup itself that was the decision maker. Buying right is more important than buying low.  
 
 
-*More details on past trades are accessible to subscribers and trialists to SwingTrader. [Free trials](http://shop.investors.com/offer/splashresponsive.aspx?id=SwingTrader&src=A011LPH) are available. Follow Nielsen on X, formerly known as Twitter, at [@IBD\_JNielsen](https://twitter.com/IBD_JNielsen).  
-SwingTrader 的订阅者和试用者可以访问有关过去交易的更多详细信息。提供[免费试用](http://shop.investors.com/offer/splashresponsive.aspx?id=SwingTrader&src=A011LPH)。在 X 上关注尼尔森，前身为 Twitter，网址为 [@IBD\_JNielsen](https://twitter.com/IBD_JNielsen)。*
+*More details on past trades are accessible to subscribers and trialists to SwingTrader. [Free trials](http://shop.investors.com/offer/splashresponsive.aspx?id=SwingTrader&src=A011LPH) are available. Follow Nielsen on X, formerly known as Twitter, at [@IBD\_JNielsen](https://twitter.com/IBD_JNielsen).* 
 
 
-**YOU MAY ALSO LIKE: 您可能还喜欢：**
+**YOU MAY ALSO LIKE:** 
 
 
-[Want To Know Our Swing Trading Strategies? Watch This Weekly Update.  
-想知道我们的波段交易策略吗？观看此每周更新。](https://www.investors.com/ibd-videos/category/swing-trader-status-update?archive=1)
+[Want To Know Our Swing Trading Strategies? Watch This Weekly Update.](https://www.investors.com/ibd-videos/category/swing-trader-status-update?archive=1) 
 
 
-[Jon Najarian Talks About A Volatile October And How To Avoid Getting Tricked.  
-乔恩·纳贾里安 （Jon Najarian） 谈论动荡的十月以及如何避免被骗。](https://www.investors.com/ibd-videos/videos/najarian-how-to-avoid-getting-scared-out-of-market-filled-with-tricks-treats)
+[Jon Najarian Talks About A Volatile October And How To Avoid Getting Tricked.](https://www.investors.com/ibd-videos/videos/najarian-how-to-avoid-getting-scared-out-of-market-filled-with-tricks-treats) 
 
 
-[Eric Krull Shares How This Market Rally Stacks Up To History  
-Eric Krull 分享了这场市场反弹如何成为历史](https://www.investors.com/ibd-videos/videos/how-to-cope-with-wild-market-swings-as-fed-cuts-rates)
+[Eric Krull Shares How This Market Rally Stacks Up To History](https://www.investors.com/ibd-videos/videos/how-to-cope-with-wild-market-swings-as-fed-cuts-rates) 
 
 
-[Follow Premarket And After-The-Open Action With IBD Experts  
-跟随 IBD 专家的盘前和开盘后行动](https://get.investors.com/ibd-live/)
+[Follow Premarket And After-The-Open Action With IBD Experts](https://get.investors.com/ibd-live/) 
 
 
 
